Compatibility: [fix] Safari height on iPhone and deploy

--- a/src/app/modules/map/map-viewer/map-canvas/map-canvas.component.sass
+++ b/src/app/modules/map/map-viewer/map-canvas/map-canvas.component.sass
@@ -1,3 +1,2 @@
 .canvas-container
     position: absolute
-    z-index: -1
