--- a/src/app/modules/map/map-viewer/map-viewer.component.sass
+++ b/src/app/modules/map/map-viewer/map-viewer.component.sass
@@ -1,6 +1,5 @@
 .legend
     position: fixed
-    z-index: 0
     top: 0px
     float: left
 
